fix checkstyle patch-1