@@ -5,7 +5,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -30,6 +29,12 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 
+import static org.junit.Assert.assertEquals;
+import static org.mockito.Mockito.atLeast;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 public class MarkUpResourceTest {
 
     @InjectMocks
@@ -44,12 +49,9 @@ public class MarkUpResourceTest {
     @Mock
     private Pageable pageable;
 
-    @Mock
-    private WebDataBinder binder;
-
     @Before
     public void setUp() {
-        MockitoAnnotations.initMocks(this);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test(expected = ValidationErrorException.class)
@@ -58,72 +60,72 @@ public class MarkUpResourceTest {
         RedactionDTO redactionDTO = createRedactionDTO();
         String[] codes = {"1"};
         FieldError fieldError = new FieldError("testField", "field", null, true, codes, null, null);
-        List<FieldError> errors = Arrays.asList(fieldError);
-        Mockito.when(result.hasErrors()).thenReturn(true);
-        Mockito.when(result.getFieldErrors()).thenReturn(errors);
+        List<FieldError> errors = List.of(fieldError);
+        when(result.hasErrors()).thenReturn(true);
+        when(result.getFieldErrors()).thenReturn(errors);
 
-        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.createMarkUp(redactionDTO, result);
+        markUpResource.createMarkUp(redactionDTO, result);
     }
 
     @Test
     public void createMarkUpSuccess() throws URISyntaxException {
 
-        RedactionDTO redactionDTO = createRedactionDTO();
+        RedactionDTO redactionDto = createRedactionDTO();
 
-        Mockito.when(markUpService.save(redactionDTO)).thenReturn(redactionDTO);
+        when(markUpService.save(redactionDto)).thenReturn(redactionDto);
 
-        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.createMarkUp(redactionDTO, result);
+        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.createMarkUp(redactionDto, result);
 
         RedactionDTO response = responseEntity.getBody();
-        Assert.assertEquals(redactionDTO.getDocumentId(), response.getDocumentId());
-        Assert.assertEquals(redactionDTO.getRedactionId(), response.getRedactionId());
-        Assert.assertEquals(redactionDTO.getRectangles().size(), response.getRectangles().size());
+        assert response != null;
+        assertEquals(redactionDto.getDocumentId(), response.getDocumentId());
+        assertEquals(redactionDto.getRedactionId(), response.getRedactionId());
+        assertEquals(redactionDto.getRectangles().size(), response.getRectangles().size());
 
-        Mockito.verify(markUpService, Mockito.atLeast(1)).save(redactionDTO);
+        verify(markUpService, atLeast(1)).save(redactionDto);
     }
 
     @Test(expected = ValidationErrorException.class)
-    public void updateMarkUpFailure() throws URISyntaxException {
-
-        RedactionDTO redactionDTO = createRedactionDTO();
+    public void updateMarkUpFailure() {
+        RedactionDTO redactionDto = createRedactionDTO();
         String[] codes = {"1"};
         FieldError fieldError = new FieldError("testField", "field", null, true, codes, null, null);
-        List<FieldError> errors = Arrays.asList(fieldError);
-        Mockito.when(result.hasErrors()).thenReturn(true);
-        Mockito.when(result.getFieldErrors()).thenReturn(errors);
+        List<FieldError> errors = List.of(fieldError);
+        when(result.hasErrors()).thenReturn(true);
+        when(result.getFieldErrors()).thenReturn(errors);
 
-        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.updateMarkUp(redactionDTO, result);
+        markUpResource.updateMarkUp(redactionDto, result);
 
     }
 
     @Test
-    public void updateMarkUpSuccess() throws URISyntaxException {
+    public void updateMarkUpSuccess() {
 
-        RedactionDTO redactionDTO = createRedactionDTO();
+        RedactionDTO redactionDto = createRedactionDTO();
 
-        Mockito.when(markUpService.save(redactionDTO)).thenReturn(redactionDTO);
+        when(markUpService.save(redactionDto)).thenReturn(redactionDto);
 
-        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.updateMarkUp(redactionDTO, result);
+        ResponseEntity<RedactionDTO>  responseEntity = markUpResource.updateMarkUp(redactionDto, result);
 
         RedactionDTO response = responseEntity.getBody();
-        Assert.assertEquals(redactionDTO.getDocumentId(), response.getDocumentId());
-        Assert.assertEquals(redactionDTO.getRedactionId(), response.getRedactionId());
-        Assert.assertEquals(redactionDTO.getRectangles().size(), response.getRectangles().size());
+        assert response != null;
+        assertEquals(redactionDto.getDocumentId(), response.getDocumentId());
+        assertEquals(redactionDto.getRedactionId(), response.getRedactionId());
+        assertEquals(redactionDto.getRectangles().size(), response.getRectangles().size());
 
-        Mockito.verify(markUpService, Mockito.atLeast(1)).save(redactionDTO);
+        verify(markUpService, atLeast(1)).save(redactionDto);
     }
 
     @Test
     public void testGetAllDocumentMarkUpsSuccess() {
 
         UUID id =  UUID.randomUUID();
-        List<RedactionDTO> redactions = Arrays.asList(createRedactionDTO());
-        Page<RedactionDTO> redactionDTOS = new PageImpl<>(redactions);
+        List<RedactionDTO> redactions = List.of(createRedactionDTO());
+        Page<RedactionDTO> redactionDtos = new PageImpl<>(redactions);
 
-        Mockito.when(markUpService.findAllByDocumentId(id, pageable)).thenReturn(redactionDTOS);
-        ResponseEntity<List<RedactionDTO>> response = markUpResource.getAllDocumentMarkUps(id, pageable);
-
-        Mockito.verify(markUpService, Mockito.atLeast(1)).findAllByDocumentId(id, pageable);
+        when(markUpService.findAllByDocumentId(id, pageable)).thenReturn(redactionDtos);
+        markUpResource.getAllDocumentMarkUps(id, pageable);
+        verify(markUpService, atLeast(1)).findAllByDocumentId(id, pageable);
     }
 
     @Test(expected = EmptyResponseException.class)
@@ -131,9 +133,9 @@ public class MarkUpResourceTest {
 
         UUID id =  UUID.randomUUID();
 
-        Page<RedactionDTO> redactionDTOS = new PageImpl<>(Collections.emptyList());
+        Page<RedactionDTO> redactionDtos = new PageImpl<>(Collections.emptyList());
 
-        Mockito.when(markUpService.findAllByDocumentId(id, pageable)).thenReturn(redactionDTOS);
+        when(markUpService.findAllByDocumentId(id, pageable)).thenReturn(redactionDtos);
         markUpResource.getAllDocumentMarkUps(id, pageable);
     }
 
@@ -141,12 +143,12 @@ public class MarkUpResourceTest {
     public void testDeleteMarkUpsSuccess() {
 
         UUID documentId =  UUID.randomUUID();
-        Mockito.doNothing().when(markUpService).deleteAll(documentId);
+        doNothing().when(markUpService).deleteAll(documentId);
 
         ResponseEntity<Void> response = markUpResource.deleteMarkUps(documentId);
 
-        Mockito.verify(markUpService, Mockito.atLeast(1)).deleteAll(documentId);
-        Assert.assertEquals(HttpStatus.OK, response.getStatusCode());
+        verify(markUpService, atLeast(1)).deleteAll(documentId);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
@@ -154,12 +156,12 @@ public class MarkUpResourceTest {
 
         UUID documentId =  UUID.randomUUID();
         UUID redactionId =  UUID.randomUUID();
-        Mockito.doNothing().when(markUpService).delete(redactionId);
+        doNothing().when(markUpService).delete(redactionId);
 
         ResponseEntity<Void> response = markUpResource.deleteMarkUp(documentId, redactionId);
 
-        Mockito.verify(markUpService, Mockito.atLeast(1)).delete(redactionId);
-        Assert.assertEquals(HttpStatus.OK, response.getStatusCode());
+        verify(markUpService, atLeast(1)).delete(redactionId);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
@@ -173,22 +175,22 @@ public class MarkUpResourceTest {
     }
 
     private RedactionDTO createRedactionDTO() {
-        RedactionDTO redactionDTO = new RedactionDTO();
-        redactionDTO.setDocumentId(UUID.randomUUID());
-        redactionDTO.setRedactionId(UUID.randomUUID());
+        RedactionDTO redactionDto = new RedactionDTO();
+        redactionDto.setDocumentId(UUID.randomUUID());
+        redactionDto.setRedactionId(UUID.randomUUID());
         Set<RectangleDTO> rectangles = new HashSet<>();
         rectangles.add(createRectangleDTO());
-        redactionDTO.setRectangles(rectangles);
-        return redactionDTO;
+        redactionDto.setRectangles(rectangles);
+        return redactionDto;
     }
 
     private RectangleDTO createRectangleDTO() {
-        RectangleDTO rectangleDTO = new RectangleDTO();
-        rectangleDTO.setId(UUID.randomUUID());
-        rectangleDTO.setHeight(10.0);
-        rectangleDTO.setWidth(10.0);
-        rectangleDTO.setX(20.0);
-        rectangleDTO.setY(30.0);
-        return rectangleDTO;
+        RectangleDTO rectangleDto = new RectangleDTO();
+        rectangleDto.setId(UUID.randomUUID());
+        rectangleDto.setHeight(10.0);
+        rectangleDto.setWidth(10.0);
+        rectangleDto.setX(20.0);
+        rectangleDto.setY(30.0);
+        return rectangleDto;
     }
 }
